[gd_scene load_steps=10 format=3 uid="uid://pdr201r5pdmg"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_0aq6d"]
[ext_resource type="PackedScene" uid="uid://c888idx4rii4b" path="res://scenes/game_board.tscn" id="2_irwmq"]
[ext_resource type="Theme" uid="uid://bf5xqbycdo8nf" path="res://resources/food_theme.tres" id="3_4jnuh"]
[ext_resource type="Script" path="res://scripts/weapons/weapon_types.gd" id="4_vkdpj"]
[ext_resource type="Script" path="res://scripts/weapons/weapon_placement.gd" id="5_t72fw"]
[ext_resource type="Script" path="res://scripts/states/game_state_machine.gd" id="6_ioxst"]
[ext_resource type="Script" path="res://scripts/states/placement_state.gd" id="7_yslxo"]
[ext_resource type="Script" path="res://scripts/states/attack_state.gd" id="8_cq8mr"]
[ext_resource type="Script" path="res://scripts/weapons/weapon_visualization.gd" id="9_qvl3r"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0aq6d")

[node name="GameStateMachine" type="Node2D" parent="."]
script = ExtResource("6_ioxst")

[node name="PlacementState" type="Node" parent="."]
script = ExtResource("7_yslxo")

[node name="AttackState" type="Node" parent="."]
script = ExtResource("8_cq8mr")

[node name="WeaponTypes" type="Node" parent="."]
script = ExtResource("4_vkdpj")

[node name="WeaponPlacement" type="Node" parent="."]
script = ExtResource("5_t72fw")

[node name="WeaponVisualization" type="Node" parent="WeaponPlacement"]
script = ExtResource("9_qvl3r")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TopBar" type="Panel" parent="UI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme = ExtResource("3_4jnuh")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Player1Container" type="VBoxContainer" parent="UI/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="NameLabel" type="Label" parent="UI/TopBar/HBoxContainer/Player1Container"]
layout_mode = 2
text = "Player 1"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI/TopBar/HBoxContainer/Player1Container"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="PhaseContainer" type="VBoxContainer" parent="UI/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="TurnLabel" type="Label" parent="UI/TopBar/HBoxContainer/PhaseContainer"]
layout_mode = 2
text = "Player 1's Turn"
horizontal_alignment = 1

[node name="PhaseLabel" type="Label" parent="UI/TopBar/HBoxContainer/PhaseContainer"]
layout_mode = 2
text = "Setup Phase"
horizontal_alignment = 1

[node name="Player2Container" type="VBoxContainer" parent="UI/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="NameLabel" type="Label" parent="UI/TopBar/HBoxContainer/Player2Container"]
layout_mode = 2
text = "Player 2"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI/TopBar/HBoxContainer/Player2Container"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="ResourceContainer" type="VBoxContainer" parent="UI/TopBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ResourceLabel" type="Label" parent="UI/TopBar/HBoxContainer/ResourceContainer"]
layout_mode = 2
text = "Resources: 10"
horizontal_alignment = 1

[node name="BottomBar" type="Panel" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_4jnuh")

[node name="WeaponButtonsContainer" type="HBoxContainer" parent="UI/BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="EndPlacementButton" type="Button" parent="UI/BottomBar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -50.0
offset_right = -170.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_4jnuh")
text = "End Placement"

[node name="GameBoard" parent="." instance=ExtResource("2_irwmq")]
position = Vector2(0, 70)